--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Dashboard</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="side-menu">
+        <div>
+          <img src="./icon/general.svg" alt="" />
+          <h1>Dashboard</h1>
+          <p>v.01</p>
+        </div>
+        <div>
+          <ul>
+            <li>
+              <span><img src="./icon/key.svg" alt=""></span>
+              <p>Dashboard</p>
+            </li>
+            <li>
+              <span><img src="./icon/product.svg" alt=""></span>
+              <p>Product</p>
+            </li>
+            <li>
+              <span><img src="./icon/customer.svg" alt=""></span>
+              <p>Customers</p>
+            </li>
+            <li>
+              <span><img src="./icon/income.svg" alt=""></span>
+              <p>Income</p>
+            </li>
+            <li>
+              <span><img src="./icon/promote.svg" alt=""></span>
+              <p>Promote</p>
+            </li>
+            <li>
+              <span><img src="./icon/help.svg" alt=""></span>
+              <p>Help</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="general-side"></div>
+    </div>
+  </body>
 </html>
