added icon in input

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Dashboard</title>
   </head>
@@ -110,6 +116,9 @@
               <p class="active-members">Active Members</p>
             </div>
             <div class="header-of-the-table-input-area">
+              <span class="icon"
+                ><img width="24" height="24" src="./icon/search.svg" alt=""
+              /></span>
               <input
                 class="input-area"
                 type="text"
