--- a/index.html
+++ b/index.html
@@ -98,8 +98,22 @@
                   </svg>
                   <p class="menu-item-paragrapher">Product</p>
                 </div>
-                <div>
-                  <img src="./icon/Vector.svg" alt="" width="16" height="16" />
+                <div class="vector">
+                  <svg
+                    width="6"
+                    height="10"
+                    viewBox="0 0 6 10"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1 9L5 5L1 1"
+                      stroke="#9197B3"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
                 </div>
               </li>
               <li class="menu-item">
@@ -130,8 +144,22 @@
                   </svg>
                   <p class="menu-item-paragrapher">Customers</p>
                 </div>
-                <div>
-                  <img src="./icon/Vector.svg" alt="" width="16" height="16" />
+                <div class="vector">
+                  <svg
+                    width="6"
+                    height="10"
+                    viewBox="0 0 6 10"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1 9L5 5L1 1"
+                      stroke="#9197B3"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
                 </div>
               </li>
               <li class="menu-item">
@@ -182,8 +210,22 @@
                   </svg>
                   <p class="menu-item-paragrapher">Income</p>
                 </div>
-                <div>
-                  <img src="./icon/Vector.svg" alt="" width="16" height="16" />
+                <div class="vector">
+                  <svg
+                    width="6"
+                    height="10"
+                    viewBox="0 0 6 10"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1 9L5 5L1 1"
+                      stroke="#9197B3"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
                 </div>
               </li>
               <li class="menu-item">
@@ -215,8 +257,22 @@
                   </svg>
                   <p class="menu-item-paragrapher">Promote</p>
                 </div>
-                <div>
-                  <img src="./icon/Vector.svg" alt="" width="16" height="16" />
+                <div  class="vector">
+                  <svg
+                    width="6"
+                    height="10"
+                    viewBox="0 0 6 10"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1 9L5 5L1 1"
+                      stroke="#9197B3"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
                 </div>
               </li>
               <li class="menu-item">
@@ -244,8 +300,22 @@
                   </svg>
                   <p class="menu-item-paragrapher">Help</p>
                 </div>
-                <div>
-                  <img src="./icon/Vector.svg" alt="" width="16" height="16" />
+                <div class="vector">
+                  <svg
+                    width="6"
+                    height="10"
+                    viewBox="0 0 6 10"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1 9L5 5L1 1"
+                      stroke="#9197B3"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
                 </div>
               </li>
             </ul>
